@@ -17,8 +17,15 @@ Breaking API Changes
     parameters. The abstract classes for Stackables were also simplified. Now we only have
     `Module` and `ModuleN` variants which are more convenient for most definitions.
     Since this is an advanced API, it should not impact standard usage of finagle.
-  * finagle-core: Update ConcurrentRingBuffer to use ClassTag instead of ClassManifest; 
+  * finagle-core: Update ConcurrentRingBuffer to use ClassTag instead of ClassManifest;
     rename size argument to capacity.
+
+Deprecations
+------------
+
+  * `ServerBuilder.stack[Req1, Rep1](mk: Stack.Params => Server[Req1, Rep1])` is
+    deprecated in favor of
+    `ServerBuilder.stack[Req1, Rep1](server: Stack.Parameterized[Server[Req1, Rep1]])`
 
 6.22.0
 ~~~~~~
